--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,11 @@
 <!-- Loop over each object in the projects array -->
-{{#each projects as |project| }}
+{{#each games as |game| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
+      <!-- Call helper function with triple brackets to render the game span as HTML -->
+      {{{get_game}}}
+      <a href="/project/{{game.id}}">{{game.name}}</a>
     </h2>
     <p>
       <span for="img" aria-label="money">💲</span>
@@ -13,11 +13,11 @@
       <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
       needed!
     </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    <p>Created by {{game.user.name}} on {{format_date game.date_created}}</p>
   </div>
   <div class="col-md-7">
     <p>
-      {{project.description}}
+      {{game.description}}
     </p>
   </div>
 </div>
