fixed homepage render

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,10 +10,10 @@
     <p>
       <span for="img" aria-label="money">💲</span>
       <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
+      <span class="dollar-amount"></span>
       needed!
     </p>
-    <p>Created by {{game.user.name}} on {{format_date game.date_created}}</p>
+    <p>Created by {{game.name}} on {{format_date game.date_released}}</p>
   </div>
   <div class="col-md-7">
     <p>
