--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,10 +8,10 @@
       <a href="/project/{{game.id}}">{{game.name}}</a>
     </h2>
     <p>
-      <span for="img" aria-label="money">💲</span>
+      <span for="img" aria-label="money">&#128187;</span>
       <!-- Pass needed_funding value to the helper function -->
       <span class="dollar-amount"></span>
-      needed!
+      Add to wishlist!
     </p>
     <p>Created by {{game.name}} on {{format_date game.date_released}}</p>
   </div>
