--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,10 @@
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-
+    <footer class ="bottom">
+      <h4> Let's get GAMING!! <br />
+      
+        <a href ="/login">Sign up!</a> OR <a href ="/login">Login!</a></h4>
     </footer>
   </div>
 
