--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,6 +13,9 @@
         <label for="project-name">Game:</label>
         <input class="form-input" type="text" id="project-name" name="project-name" />
       </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Select</button>
+      </div>
     </form>
   </div>
 
