Added a front end search bar that fetches game data upon user input in the login screen

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,6 +19,9 @@
   <div class="col-md-6">
     <h2>Signup</h2>
 
+    <input type="text" id="searchBar" placeholder="Search for games by name...">
+                <div id="results"></div>
+
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup">name:</label>
