--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,6 +15,8 @@
       </div>
       <div class="form-group">
 
+      <input type="text" id="searchBar" placeholder="Search for games by name...">
+          <div id="results"></div>
         <button type="submit" class="btn btn-primary">Search</button>
       </div>
 
