--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -2,7 +2,7 @@
   <h2>{{name}}</h2>
   <p>{{{get_game}}}</p>
   <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>Added {{user.name}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="money">💲</span>
     <span class="dollar-amount">{{format_amount rating_count}}</span>
