--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,24 +4,54 @@
   </div>
 </div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
     <h3>Add a game to Wishlist:</h3>
-
-    <form class="form new-project-form">
+    
       <div class="form-group">
         <label for="project-name">Game:</label>
       <input type="text" id="searchBar" placeholder="Search for games by name...">
           <div id="results"></div>
       </div>
-      <div class="form-group">
+    </div>
 
-        <button type="submit" class="btn btn-primary">Search</button>
-      </div>
+<div class="row mt-4">
+  <div class="col-md-6">
+    {{#each games as |game| }}
+<div class="row mb-4 project">
+  <div class="col-md-5">
+    <h2>
+
+      <!-- Call helper function with triple brackets to render the game span as HTML -->
+      {{{get_game}}}
+
+      {{#if logged_in}}
+      <a href="/project/{{game.id}}">{{game.name}}</a>
+      {{else}}
+      <a href="/login/">{{game.name}}</a>
+      {{/if}}
+    </h2>
 
 
-    </form>
+
+
+    <p>
+      <span for="img" aria-label="money">&#128187;</span>
+      <!-- Pass needed_funding value to the helper function -->
+      <span class="wishlist"></span>
+      Add to wishlist!
+    </p>
+    <p>Released on {{format_date game.date_released}}</p>
   </div>
+  <div class="col-md-7">
+    <p>
+      {{game.description}}
+    </p>
+  </div>
+</div>
+{{/each}}
+
+
+
+
 
   
 
