--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,6 +3,8 @@
   Gain Experience points with every game you play, and review them after you complete the game! <br />
   Sign up today to join the community of checking out games based on your favourite genre and gain lvls experiencing new
   games out now or games you have not played!</h4>
+
+<h3>Gain XP and unlock Perks! <br /> Enjoy the adventure! <br /> Rate the game after completion! <br /> Let's GAME!!!!</h3>
 {{#each games as |game| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
