--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,12 @@
             <a class="game" href="/login">Login</a>
             {{/if}}
         </h1>
+        <div class="gaming">
+  <img src ="https://assets.xboxservices.com/assets/2f/dd/2fdd2656-a979-4c24-9b92-599efee158f8.jpg?n=Fortnite_Sneaky-Slider-1084_Ch5-S2_1600x675_01.jpg" width="500px" height ="220px">  
+  <img src ="https://store-images.s-microsoft.com/image/apps.608.13850085746326678.a9b1e0db-29d0-40f3-a86c-2155353d053c.bc981608-3fa4-4929-82ff-b162b8788784?q=90&w=480&h=270" width="400px" height ="220px">
+  <img src ="https://img.redbull.com/images/c_limit,w_1500,h_1000,f_auto,q_auto/redbullcom/2020/6/5/ctsejxmdtw9inp8zqqqd/red-bull-campus-clutch-valorant-agents" width="500px" height="220px">
+  <img src ="https://media.graphassets.com/resize=fit:clip,height:720,width:1280/output=format:webp/5oPZyiFQ3qmS83SjK8Ku" width="400px" height ="220px">
+</div>
       </nav>
     </header>
     <main class="container container-fluid mt-5">
@@ -32,7 +38,7 @@
       {{{ body }}}
     </main>
     <footer class="bottom">
-      <h4> Let's get GAMING! <br />
+      <h4>
         Wild Coders </br />
         Copyright© 2024
     </footer>
