--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,10 +4,9 @@
   </div>
 </div>
 
-    <h3>Add a game to Wishlist:</h3>
+    <h3>Add a game to Wishlist or Collection:</h3>
     
       <div class="form-group">
-        <label for="project-name">Game:</label>
       <input type="text" id="searchBar" placeholder="Search for games by name...">
           <div id="results"></div>
       </div>
