Added a dashroute into the controllers.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <nav class="navigate">
         <h1 id="bars">
           <a class="game" href="/">Home</a>
-          <a class="game" href="/project">Game Dashboard</a>
+          <a class="game" href="/project">Dashboard</a>
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
           <a class="game" href="/profile">Profile</a>
