--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,3 +134,11 @@ p {
   width: 100%;
 
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-left: 0px;
+  margin-right: -15px;
+}
