--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,3 +142,19 @@ p {
   margin-left: 0px;
   margin-right: -15px;
 }
+
+.remove {
+  display: flex;
+  justify-content: end;
+  padding-bottom: 2px;
+  padding-right: 10px;
+  color: black;
+}
+.remove:hover {
+  cursor: pointer;
+  color: red;
+}
+
+.rating, .date {
+  padding-left: 5px;
+}
