--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,7 +12,7 @@
 </div>
 </div>
 
-<div class="row mt-4">
+<div class="row mt-4" id="collection">
   <div class="col-md-6">
     {{#each games as |game| }}
     <div class="row mb-4 project">
