--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,16 +140,36 @@ p {
   flex-direction: row;
   margin-left: 0px;
   margin-right: -15px;
+  align-content: flex-start;
 }
 
-.remove {
+.addremove {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 2px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: black;
+}
+.remove:hover {
+  cursor: pointer;
+  color: red;
+}
+.addto:hover {
+  cursor: pointer;
+  color: red;
+}
+
+.delete {
   display: flex;
   justify-content: end;
   padding-bottom: 2px;
   padding-right: 10px;
+  padding-left: 10px;
   color: black;
 }
-.remove:hover {
+
+.delete:hover {
   cursor: pointer;
   color: red;
 }
