fixed remove buttons

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,67 +12,67 @@
 </div>
 
 
-<div class="content-container">
+<div class="content-container" id="content-container">
 
 
-{{!-- Card for wishlist --}}
- <div class="row mt-4" id="wishlist">
-<h2 class="side">Wishlist</h2>
-  <div class="col-md-12">
-    {{#each games as |game| }}
-    {{#unless game.status}} 
-    <div class="card-conatiner">
-      <div class="card">
-        <h2 class="card-header">
+  {{!-- Card for wishlist --}}
+  <div class="row mt-4" id="wishlist">
+    <h2 class="side">Wishlist</h2>
+    <div class="col-md-12">
+      {{#each games as |game| }}
+      {{#unless game.status}}
+      <div class="card-conatiner">
+        <div class="card">
+          <h2 class="card-header">
 
-        
 
-          {{#if logged_in}}
-          <a href="/project/{{game.id}}">{{game.name}}</a>
-          {{else}}
-          <a href="/login/">{{game.name}}</a>
-          {{/if}}
-        </h2>
-        <p class="date">Released on {{format_date game.date_released}}</p>
-        <p class="rating">Rating {{game.rating_count}}</p>
-        <section class="addremove"> 
-              <div class="addto" data-id="{{game.id}}">Add to Collection</div>
-              <div class="remove" data-id="{{game.id}}">Remove</div>
-        </section>
+
+            {{#if logged_in}}
+            <a href="/project/{{game.id}}">{{game.name}}</a>
+            {{else}}
+            <a href="/login/">{{game.name}}</a>
+            {{/if}}
+          </h2>
+          <p class="date">Released on {{format_date game.date_released}}</p>
+          <p class="rating">Rating {{game.rating_count}}</p>
+          <section class="addremove">
+            <div class="addto" data-id="{{game.id}}">Add to Collection</div>
+            <div class="remove" data-id="{{game.id}}">Remove</div>
+          </section>
+        </div>
       </div>
+      {{/unless}}
+      {{/each}}
     </div>
-    {{/unless}}
-    {{/each}}
   </div>
- </div>
 
-{{!-- Card for Collection --}}
- <div class="row mt-4" id="collection">
-<h2 class="side">My Games</h2>
-  <div class="col-md-12">
-    {{#each games as |game| }}
-    {{#if game.status}} 
-    <div class="card-container">
-      <div class="card">
-        <h2 class="card-header">
+  {{!-- Card for Collection --}}
+  <div class="row mt-4" id="collection">
+    <h2 class="side">My Games</h2>
+    <div class="col-md-12">
+      {{#each games as |game| }}
+      {{#if game.status}}
+      <div class="card-container">
+        <div class="card">
+          <h2 class="card-header">
 
-    
 
-          {{#if logged_in}}
-          <a href="/project/{{game.id}}">{{game.name}}</a>
-          {{else}}
-          <a href="/login/">{{game.name}}</a>
-          {{/if}}
-        </h2>
-        <p class="date">Released on {{format_date game.date_released}}</p>
-        <p class="rating">Rating {{game.rating_count}}</p>   
-        <div class="delete" data-id="{{game.id}}">Remove</div>
+
+            {{#if logged_in}}
+            <a href="/project/{{game.id}}">{{game.name}}</a>
+            {{else}}
+            <a href="/login/">{{game.name}}</a>
+            {{/if}}
+          </h2>
+          <p class="date">Released on {{format_date game.date_released}}</p>
+          <p class="rating">Rating {{game.rating_count}}</p>
+          <div class="delete" data-id="{{game.id}}">Remove</div>
+        </div>
       </div>
+      {{/if}}
+      {{/each}}
     </div>
-    {{/if}}
-    {{/each}}
   </div>
- </div>
 
 
 
