formatted some documents

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,6 +4,7 @@
   Sign up today to join the community of checking out games based on your favourite genre and gain lvls experiencing new
   games out now or games you have not played!</h4>
 
-<h3>Gain XP and unlock Perks! <br /> Enjoy the adventure! <br /> Rate the game after completion! <br /> Let's GAME!!!!</h3>
+<h3>Gain XP and unlock Perks! <br /> Enjoy the adventure! <br /> Rate the game after completion! <br /> Let's GAME!!!!
+</h3>
 
 <h5><a href="/login">SIGN UP!</a> or <a href="/login">LOGIN!</a></h5>
