Changed the pathway to have no spaces in between the logo's pathway.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <header class="display-flex justify-space-between align-center p-2">
 
       <nav class="navigate">
-        <img src ="/assets/XP Archive.png" width='280px' height='280px'>
+        <img src ="/assets/XP-Archive.png" width='280px' height='280px'>
         <h1 id="bars">
           <a class="game" href="/">Home</a>
           <!-- Conditionally render login or logout links -->
